--- a/core/templates/core/console.html
+++ b/core/templates/core/console.html
@@ -129,7 +129,7 @@
             <div class="menu console-menu hidden-xs">
                 <h4 class="text-muted">
                     <div class="disc coupon">
-                        <i class="fa fa-ticket"></i>
+                        <i class="fas fa-ticket-alt"></i>
                     </div>
                     {% trans "My collection" %}
                 </h4>
