--- a/accesscontrol/templates/accesscontrol/sign_in_minimal.html
+++ b/accesscontrol/templates/accesscontrol/sign_in_minimal.html
@@ -72,6 +72,19 @@
                             <input id="last-name" class="form-control input-sm" type="text" name="last_name"/>
                         </div>
                     </div>
+                    <div class="form-group row last-name">
+                        <label for="last-name" class="col-sm-5 col-md-4">{% trans "Your are ..." %}</label>
+                        <div class="checkbox">
+                            <label>
+                                <input id="accept-terms" type="radio" name="gender" value="Female" /> {% trans "A woman" %}
+                            </label>
+                        </div>
+                        <div class="checkbox">
+                            <label>
+                                <input id="accept-terms" type="radio" name="gender" value="Male" /> {% trans "A man" %}
+                            </label>
+                        </div>
+                    </div>
                     {% if settings.REGISTER_WITH_DOB %}
                         {% include "accesscontrol/snippets/dob_widget.html" %}
                     {% endif %}
