--- a/accesscontrol/templates/accesscontrol/snippets/request_management.html
+++ b/accesscontrol/templates/accesscontrol/snippets/request_management.html
@@ -2,12 +2,16 @@
 <div id="modal-join-notice" class="modal fade" role="dialog">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content modal-info">
-            <div class="modal-body">
-                <div class="col-sm-6">
-                    <img src="{% static 'ikwen/img/join-notice.jpg' %}" class="guard-img-landscape img-responsive">
-{#                    <img src="{% get_media_prefix %}{{ config.guard_image_portrait.name }}" class="guard-img-portrait img-responsive">#}
+            <div class="modal-header no-border" style="padding-bottom: 0">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true" style="color: #fff">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body" style="padding: 0">
+                <div class="text-center">
+                    <img alt="Welcome Img" src="{% static 'ikwen/img/join_modal_image.png' %}" class="img-responsive" />
                 </div>
-                <div class="col-sm-6 speech">
+                <div class="speech text-center">
                     {% blocktrans %}
                     <h3>Great !</h3>
                     <div class="no-reward">
@@ -16,35 +20,58 @@
                     </div>
                     <div class="reward-available">
                         <p>
-                            You just joined <span class="project-name"></span> community and earned <span class="join-coupon-count"></span> coupons
+                            You just joined <span class="project-name">{{ joined }}</span> community and earned
+                            <span class="join-coupon-count">{{ join_coupon_count }}</span> coupons
                             for that.</p>
                         <p>
                             Collect up to 100 coupons and redeem them with us for the equivalent gift;
                             on our website or in our store.
                         </p>
-                        <p class="cr-refer">
-                            Refer friends by sharing and earn <span class="referral-coupon-count"></span> more free coupons.
+                        <p class="cr-refer" style="color: #FFC107">
+                            Invite friends by sharing and get
+                            <span class="referral-coupon-count">{{ referral_coupon_count }}</span> more free coupons.
                         </p>
                     </div>
                     {% endblocktrans %}
                 </div>
-                <div class="actions">
-                    <div class="col-xs-12 col-sm-4 col-md-3 pull-right reward-available">
-                        <a href="" class="btn btn-sm btn-danger btn-block cta claim"
-                                data-dismiss="modal" aria-label="Close">{% trans "Claim your reward" %}</a>
+                <div class="modal-footer no-border">
+                    <div class="actions reward-available row" style="margin-top: 0">
+                        <div class="col-xs-12 col-sm-4 cr-refer col-sm-offset-2 dropup social-sharing">
+                            <button class="btn btn-default btn-block btn-outline-success invite-friends"
+                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <i class="fa fa-share"></i>
+                                {% trans "Invite friends" %}
+                            </button>
+                            <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="share-coupons" style="right: 15px">
+                                <li class="visible-xs visible-sm" data-dismiss="modal" >
+                                    <a href="javascript:;" data-toggle="modal" data-target="#whatsapp-share"
+                                       class="wsap-link" data-url="{{ url }}">
+                                        <i class="fab fa-whatsapp"></i>
+                                        WhatsApp
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://facebook.com/sharer/sharer.php?u={{ url }}"
+                                       class="fb-link" target="_blank">
+                                        <i class="fab fa-facebook"></i>
+                                        Facebook
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://twitter.com/home?status={{ url }}"
+                                       class="twtr-link" target="_blank">
+                                        <i class="fab fa-twitter"></i>
+                                        Twitter
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="col-xs-12 col-sm-4 col-sm-offset-4 reward-available">
+                            <a href="" class="btn btn-danger btn-block claim btn-outline-white"
+                                    data-dismiss="modal" aria-label="Close">{% trans "Claim your reward" %}</a>
+                        </div>
+                        <div class="clearfix"></div>
                     </div>
-                    <div class="col-xs-12 col-sm-4 col-md-3 pull-right cr-refer">
-                        <button class="btn btn-sm btn-default btn-block"
-                                data-dismiss="modal" aria-label="Close">
-                            <i class="fa fa-forward"></i>
-                            {% trans "Refer" %}
-                        </button>
-                    </div>
-                    <div class="col-xs-12 col-sm-4 col-md-3 pull-right no-reward">
-                        <button class="btn btn-sm btn-default btn-block"
-                                data-dismiss="modal" aria-label="Close">{% trans "Cancel" %}</button>
-                    </div>
-                    <div class="clearfix"></div>
                 </div>
             </div>
         </div>
@@ -68,7 +95,10 @@
                     $('div#modal-join-notice .speech > div, div#modal-join-notice .actions > div, .cr-refer').hide();
                     if (data.reward.join_coupon_count || data.reward.referral_coupon_count) {
                         $('.reward-available').show();
-                        if (data.reward.referral_coupon_count) $('.cr-refer').show();
+                        if (data.reward.referral_coupon_count) {
+                            $('.cr-refer').show();
+                            $('.reward-available.col-sm-offset-4').removeClass('col-sm-offset-4');
+                        }
                     } else {
                         $('.no-reward').show();
                     }
@@ -76,6 +106,9 @@
                     $('.referral-coupon-count').text(data.reward.referral_coupon_count);
                     $('div#modal-join-notice .project-name').text(data.project_name);
                     $('#modal-join-notice').modal('show').find('.claim').attr('href', data.ikwen_page);
+                    $('#modal-join-notice .fb-link').attr('href', 'https://facebook.com/sharer/sharer.php?u=' + data.ikwen_page);
+                    $('#modal-join-notice .twtr-link').attr('href', 'https://facebook.com/sharer/sharer.php?u=' + data.ikwen_page);
+                    $('.wsap-link').data('url', 'https://facebook.com/sharer/sharer.php?u=' + data.ikwen_page);
                 }
             })
         });
