--- a/static/ikwen/css/console.css
+++ b/static/ikwen/css/console.css
@@ -40,8 +40,6 @@
 .bottom-join {background: #fff; bottom: -140px; height: 125px; left: 0;
     position: fixed; width: 100%; z-index: 1000; transition: all .3s}
 .bottom-join.revealed {bottom: 0; transition: all .3s}
-#modal-join-notice .modal-body {padding: 20px 0;}
-#modal-join-notice .modal-content {background: #364761;border-radius: 0;color: #fff;}
 
 .coupon-img {cursor: pointer}
 #coupon-detail img {cursor: pointer; height: 180px}
@@ -150,7 +148,7 @@
 .coupon-tile.tile-3-2 {height: 50%;width: 40%;}
 .coupon-tile .coupon-count {margin: 0 0 0 10px; position: absolute}
 .card-signature {border-top: 1px dashed #ddd; clear: both; margin-top: 5px; padding-top: 10px}
-.card-signature .photo {border-radius: 50%;float: left;overflow: hidden;width: 12%;}
+.card-signature .photo {border-radius: 50%;float: left;height:60px;overflow: hidden;width: 60px;}
 .card-signature .member-info {float: left; padding-left: .8em; width: 84%}
 .card-signature .member-name {margin-top: 15px}
 .profile-about ul {margin: 0; padding: 0}
@@ -167,6 +165,20 @@
 .join-successful {color: #57b21b; display: none; font-size: 30px; height: 35px; line-height: 32px}
 .access-request .member-name {font-weight: 700;}
 .disc.coupon {background: #e84735;border-radius: 13px;color: #fff;float: left;font-size: 15px;height: 26px;line-height: 24px;margin: -5px 5px 0 0;text-align: center;width: 26px;}
+
+/* Join Modal */
+.no-border {border: none;}
+#modal-join-notice .modal-content {background: linear-gradient(to bottom, #047DB0 , #01244F);}
+#modal-join-notice .speech {font-size: 15px}
+.btn-outline-success {background-color: transparent;background-image: none;border-color: #FFC107;color: #FFC107;}
+.btn-outline-success:hover, .btn-outline-success:active, .btn-outline-success:active:hover {background-color: #FFC107; border-color: #FFC107; color: #fff}
+.btn-outline-white {background-color: transparent;background-image: none;border-color: #fff;color: #fff;}
+.btn-outline-white:hover {background-color: #fff; border-color: #fff; color: #01244F}
+.btn-outline-success:focus, .btn-outline-success.focus {box-shadow: 0 0 0 0.2rem rgba(40, 167, 69, 0.5)}
+#modal-join-notice .modal-body {padding: 0;}
+#modal-join-notice .modal-content {border-radius: 0;color: #fff;}
+#whatsapp-share-msg {height: 80px}
+
 @media (min-width: 375px) {
     .coupon-event.count-3 {height: 340px;}
 }
@@ -181,6 +193,11 @@
     .access-request .deny-access {float: right}
     .card-ul .swiper-slide {padding: 0 10px; width: 45%}
     .card-li .cover {height: 135px;}
+    #modal-join-notice .speech h3 {margin-top: 5px;font-size: 24px;}
+    #modal-join-notice .speech p {padding: 0 10px}
+    #modal-join-notice .btn {padding: 6px 9px;}
+    #modal-join-notice .modal-footer {padding-top: 0}
+    #modal-join-notice .modal-header {padding-top: 10px}
 }
 @media (min-width: 768px) {
     .access-request .logo {float: left;text-align: center;width: 108px;}
@@ -190,11 +207,16 @@
     .access-request .details {clear: none;float: left;margin-left: 15px;padding-top: 0;width: 540px;}
     .card-ul .swiper-slide {max-width: 180px; width: 35%}
     .card-li .cover {height: 160px;}
+    #modal-join-notice .speech {font-size: 18px;}
+}
+@media (min-width: 768px) and (orientation: landscape) {
+    #modal-join-notice img {max-height: 220px;margin: auto;}
 }
 @media (min-width: 992px) {
     #cover {max-width: 820px;}
     .access-request .logo {float: left;text-align: center;width: 130px;}
     .access-request .logo img {float: none; width: 100px}
+    #modal-join-notice img {max-height: 240px;}
 }
 
 #ad-space-right {display: none}
