--- a/static/ikwen/css/console.css
+++ b/static/ikwen/css/console.css
@@ -178,6 +178,20 @@
 #modal-join-notice .modal-body {padding: 0;}
 #modal-join-notice .modal-content {border-radius: 0;color: #fff;}
 #whatsapp-share-msg {height: 80px}
+#modal-login-to-refer .modal-content {
+    background: #003984;
+    background: -moz-linear-gradient(top, #003984 1%, #110b42 86%);
+    background: -webkit-linear-gradient(top, #003984 1%,#110b42 86%);
+    background: linear-gradient(to bottom, #003984 1%,#110b42 86%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#003984', endColorstr='#110b42',GradientType=0 );
+}
+#modal-login-to-refer img {max-height: 260px;margin: auto;}
+#modal-refer-now .modal-content {background: #000 url('../img/cr-refer-now.png') center; background-size: cover; height: 450px}
+#modal-refer-now .social {margin: 0 auto 60px;width: 160px;}
+#modal-refer-now .social li {display: inline-block;list-style-type: none;margin-right: 20px;}
+#modal-refer-now .social li:last-child {margin-right: 0}
+#modal-refer-now .social li a {float: left;color: #fff;}
+#modal-refer-now .social li i {font-size: 40px;}
 
 @media (min-width: 375px) {
     .coupon-event.count-3 {height: 340px;}
@@ -208,15 +222,19 @@
     .card-ul .swiper-slide {max-width: 180px; width: 35%}
     .card-li .cover {height: 160px;}
     #modal-join-notice .speech {font-size: 18px;}
+    #modal-refer-now .social {width: 100px;}
+    #modal-refer-now .social li:first-child {display: none}
 }
 @media (min-width: 768px) and (orientation: landscape) {
     #modal-join-notice img {max-height: 220px;margin: auto;}
+    #modal-login-to-refer img {max-height: 220px;margin: auto;}
 }
 @media (min-width: 992px) {
     #cover {max-width: 820px;}
     .access-request .logo {float: left;text-align: center;width: 130px;}
     .access-request .logo img {float: none; width: 100px}
     #modal-join-notice img {max-height: 240px;}
+    #modal-login-to-refer img {max-height: 360px;}
 }
 
 #ad-space-right {display: none}
