--- a/static/ikwen/css/console.css
+++ b/static/ikwen/css/console.css
@@ -22,7 +22,8 @@
     width: 100%;
     overflow: hidden;
 }
-.console-menu {float: left;height: 350px;margin-top: 15px;width: 280px;}
+.console-menu {background: #f6f6f6; float: left;height: 350px;margin-top: 15px; transition: all .3s;width: 280px;}
+.console-menu.fixed {position: fixed;top: 55px; transition: all .3s}
 .console-menu .ik-li {background: none}
 .console-menu .ik-li .title {font-size: 17px}
 .console-menu .image.rounded {border-radius: 25px;height: 50px;width: 50px;}
