--- a/static/ikwen/css/base.css
+++ b/static/ikwen/css/base.css
@@ -306,7 +306,7 @@ time {color: #888;float: right;font-size: 11px; font-weight: normal; padding: 0;
         margin: 0;
         padding-left: 0;
         padding-right: 0;
-        position: static;
+        position: static !important;
         box-shadow: none;
         width: 300px;
         }
