Bug fix: id="accept-terms" removed from gender <radio..> inputs

--- a/accesscontrol/templates/accesscontrol/sign_in_minimal.html
+++ b/accesscontrol/templates/accesscontrol/sign_in_minimal.html
@@ -76,12 +76,12 @@
                         <label for="last-name" class="col-sm-5 col-md-4">{% trans "Your are ..." %}</label>
                         <div class="checkbox col-sm-3">
                             <label>
-                                <input id="accept-terms" type="radio" name="gender" value="Female" /> {% trans "A woman" %}
+                                <input type="radio" name="gender" value="Female" /> {% trans "A woman" %}
                             </label>
                         </div>
                         <div class="checkbox col-sm-3" style="margin-top: 10px">
                             <label>
-                                <input id="accept-terms" type="radio" name="gender" value="Male" /> {% trans "A man" %}
+                                <input type="radio" name="gender" value="Male" /> {% trans "A man" %}
                             </label>
                         </div>
                     </div>
